extend file upload API to return metadata in response
